tests/invalid/invalid_missing_semicolon.c
// FAIL
int main() {
    return 0
}
